--- a/menu.html
+++ b/menu.html
@@ -101,45 +101,37 @@
 
         <div id="gridContainer">
 
-          <div id="miro_tilledfields" class="gazeIndicator item" style="background-image:url(miro.jpg)"  gazeAction = "setPainting('miro_tilledfields')" gazeOverClass='gazeIndicatorGazing' gazeAware>
+          <div class="gazeIndicator item"  gazeOverClass='gazeIndicatorGazing' gazeAware>
             <div class="item_content" >
               <div class="item_title">
-                The Tilled Field
               </div>
               <div class = "item_author">
-                Joan Miró
               </div>
             </div>
           </div>
 
-          <div id="bruegel_triumphofdeath" class="gazeIndicator item" style="background-image:url(bosch.jpg)"  gazeAction = "setPainting('bruegel_triumphofdeath')" gazeOverClass='gazeIndicatorGazing' gazeAware>
+          <div class="gazeIndicator item"  gazeOverClass='gazeIndicatorGazing' gazeAware>
             <div class="item_content" >
               <div class="item_title">
-                The Triumph of Death
               </div>
               <div class = "item_author">
-                Pieter Bruegel
               </div>
             </div>
           </div>
 
-          <div id="test_3" style="background:gray;" class="item gazeIndicator"  gazeAction = "setPainting('test_3')" gazeOverClass='gazeIndicatorGazing' gazeAware>
+          <div id="test_3" class="item gazeIndicator"  gazeOverClass='gazeIndicatorGazing' gazeAware>
             <div class="item_content" >
               <div class="item_title">
-                Title
               </div>
               <div class = "item_author">
-                Artist
               </div>
             </div>
           </div>
-          <div id="test_4" style="background:gray;"  class="item gazeIndicator"  gazeAction = "setPainting('test_4')" gazeOverClass='gazeIndicatorGazing' gazeAware>
+          <div id="test_4" class="item gazeIndicator"  gazeOverClass='gazeIndicatorGazing' gazeAware>
             <div class="item_content" >
               <div class="item_title">
-                Title
               </div>
               <div class = "item_author">
-                Artist
               </div>
             </div>
           </div>
@@ -158,6 +150,11 @@
   <script>
 
   var painting = undefined;
+  var paintings =[];
+
+  loadPaintings();
+  setMenu(0);
+
 
   //Get Gaze coordinates
    var ipc = require('electron').ipcRenderer;
@@ -187,6 +184,8 @@
     setupGaze();
     setInterval(updateGaze, 10);
 
+
+
     function testGazeAction(){
       console.log("test Gaze Action");
     }
@@ -200,7 +199,7 @@
 
     function setPainting(thisPainting){
       painting = thisPainting;
-      console.log('settin: '+thisPainting);
+      console.log('setting: '+thisPainting);
       document.getElementById("confirmButton").innerHTML = "View "+thisPainting;
       var items = document.getElementsByClassName('item');
       for (var i = 0; i < items.length; i++) {
@@ -241,6 +240,41 @@
             }
           }
       }
+    }
+
+    
+    function setMenu(index){
+      //for items 0->4
+      var items = document.getElementsByClassName('item');
+      for (var i = 0; i < items.length; i++) {
+        if(paintings[i+index]!=undefined){
+            items[i].id = paintings[i+index].id;
+            items[i].style.backgroundImage = 'url('+paintings[i+index].image+')';
+            items[i].setAttribute("gazeAction", "setPainting('" + paintings[i+index].id + "')" );
+
+            var title = items[i].getElementsByClassName("item_title")[0];
+            var artist = items[i].getElementsByClassName("item_author")[0];
+            title.innerHTML = paintings[i+index].title + " (" + paintings[i+index].year + ")";
+            artist.innerHTML = paintings[i+index].artist;
+
+        }
+      }
+
+      
+    }
+
+    function loadPaintings(){
+      var normalizedPath = require("path").join(__dirname, "paintings");
+
+      require("fs").readdirSync(normalizedPath).forEach(function(file) {
+        paintingObject = require("./paintings/" + file);
+        var fileName = file.replace('.json','');
+        //console.log(fileName);
+        //console.log(paintingObject);
+        paintingObject.id=fileName;
+        paintings.push(paintingObject);
+      });
+
     }
   </script>
 </body>
