--- a/menu.html
+++ b/menu.html
@@ -62,7 +62,13 @@
     .item{
       position:relative;
       background-size:cover;
+
+      background-repeat:no-repeat;
+      background-position: center center;
+
       overflow:hidden;
+
+
     }
     .item_content{
       width:100%;
@@ -158,9 +164,9 @@
   </div>
 
   <script>
-  var artOrder = [0,3]; 
+  var artOrder = [0,1,2,3]; 
 
-  var artDesign = {"miro_tilledfields": "4","bruegel_triumphofdeath":"2"};
+  var artDesign = {"dali": "4","ernst":"4","miro":"4","picasso":"4"};
 
   var painting = undefined;
   var paintings =[];
