--- a/electron/resources/app/index.html
+++ b/electron/resources/app/index.html
@@ -92,7 +92,7 @@ setupMenuButton();
 //Get Gaze coordinates
 var ipc = require('electron').ipcRenderer;
 ipc.on('gaze-pos', (event, arg) => {
-  if(arg.timestamp )
+  if(arg.timestamp)
   lastGazePosition.x= gazePosition.x;
   lastGazePosition.y=gazePosition.y;
   gazePosition.x = arg.x;
@@ -191,14 +191,13 @@ imageDefault.onload = function(){
     pixelsDefault = imageDataDefault.data;
     numPixels = imageDataDefault.width * imageDataDefault.height;
     pixelsModulated  = imageDataModulated.data;
-
     for (var i = 0; i < numPixels; i++) {
       pixelsModulated[i*4] = pixelsDefault[i*4]     * 1.05; // Red
       pixelsModulated[i*4+1] = pixelsDefault[i*4+1] * 1.05; // Green
       pixelsModulated[i*4+2] = pixelsDefault[i*4+2] * 1.05; // Blue
     }
     ctx.putImageData(imageDataModulated, 0, 0);
-     imageModulated.src = canvas.toDataURL(); 
+    imageModulated.src = canvas.toDataURL(); 
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 }
 
@@ -311,25 +310,22 @@ function playAudio(filename, callback, callbackDelay){
   }, false);
 }
 
-//Creates feathered blur
+//Clips canvas into a fearthered blur around region
 function clipArc(context, x, y, r) {
     context.globalCompositeOperation = 'destination-in';
     context.filter = "blur(10px)";  // "feather"
     context.beginPath();
-
     context.arc(x, y, r, 0, 2 * Math.PI);
-
     context.fill();
 
-    // reset comp. mode and filter
+    //reset comp. mode and filter
     context.globalCompositeOperation = 'source-over';
     context.filter = "none";
 }
 
 //Return true/false for if gazing at point
 function gazingAtPoint(x, y, r){
-  //Get x,y,r
-  //Check if point in circle, use offset
+  //Check if point in circle, use margin
   var margin = 100; //Margin around point
   return (Math.pow((gazePosition.x - x - canvasMargin),2) + Math.pow((gazePosition.y - y),2) < Math.pow(r+margin,2));
 
@@ -378,23 +374,23 @@ function checkMenuButton(){
   var margin = 100;
   if(gazePosition.x > (menuButton.rect.left-margin)
           && gazePosition.y < menuButton.rect.top + menuButton.rect.height+margin){
-            //Gazing
-            if(menuButton.dwell){
-              //No change
+    //Gazing
+    if(menuButton.dwell){
+      //No change
 
-            } else{
-              menuButton.dwell=true;
-              menuButton.el.className = "menuButtonGazing";
-              menuButton.dwellTimeout = setTimeout("menuButtonFunction()" , 3000);
-            }
-          } else {
-            //Not Gazing
-            if(menuButton.dwell){
-              menuButton.dwell=false;
-              menuButton.el.className="";
-               clearTimeout(menuButton.dwellTimeout);
-            }
-          }
+    } else{
+      menuButton.dwell=true;
+      menuButton.el.className = "menuButtonGazing";
+      menuButton.dwellTimeout = setTimeout("menuButtonFunction()" , 3000);
+    }
+  } else {
+    //Not Gazing
+    if(menuButton.dwell){
+      menuButton.dwell=false;
+      menuButton.el.className="";
+       clearTimeout(menuButton.dwellTimeout);
+    }
+  }
 }
 
 function menuButtonFunction(){
@@ -410,7 +406,6 @@ var fixation = {x:undefined, y:undefined};
 
 //Checks whether we're in a fixation or a saccade, updates globals
 function checkFixation(){
-  //Velocity threshold, will need to be adjusted based on distance & screen size
   var threshold=25;
   var vX = gazePosition.x-lastGazePosition.x;
   var vY = gazePosition.y-lastGazePosition.y;
